<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_str"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/text_theme"
            android:text="@string/get_str"/>

        <TextView
            android:id="@+id/tv_score"
            style="@style/text_theme"
            android:text="@string/zero_str"/>

        <TextView
            style="@style/text_theme"
            android:text="@string/score_str"/>
    </LinearLayout>

    <LinearLayout
        style="@style/block_theme"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_11"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
            <TextView
                android:id="@+id/tv_12"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
            <TextView
                android:id="@+id/tv_13"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
            <TextView
                android:id="@+id/tv_14"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_21"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
            <TextView
                android:id="@+id/tv_22"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
            <TextView
                android:id="@+id/tv_23"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
            <TextView
                android:id="@+id/tv_24"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_31"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
            <TextView
                android:id="@+id/tv_32"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
            <TextView
                android:id="@+id/tv_33"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
            <TextView
                android:id="@+id/tv_34"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_41"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
            <TextView
                android:id="@+id/tv_42"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
            <TextView
                android:id="@+id/tv_43"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
            <TextView
                android:id="@+id/tv_44"
                style="@style/cubes_theme"
                android:text="@string/zero_str"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_up"
            style="@style/button_theme"
            android:text="@string/up_str"/>
        <Button
            android:id="@+id/bt_down"
            style="@style/button_theme"
            android:text="@string/down_str"/>
        <Button
            android:id="@+id/bt_left"
            style="@style/button_theme"
            android:text="@string/left_str"/>
        <Button
            android:id="@+id/bt_right"
            style="@style/button_theme"
            android:text="@string/right_str"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_start"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_str"/>

</LinearLayout>